bugfix in html of output vids

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -65,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#importing some useful packages\n",
@@ -166,7 +168,9 @@
   {
    "cell_type": "code",
    "execution_count": 425,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -672,14 +676,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 464,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 221/222 [00:04<00:00, 54.01it/s]\n"
+      "100%|█████████▉| 221/222 [00:04<00:00, 54.69it/s]\n"
      ]
     }
    ],
@@ -690,7 +694,7 @@
     "video = \"solidWhiteRight.mp4\"\n",
     "\n",
     "video_in_path = video_dir + video\n",
-    "video_out_path = \"test_videos_output/\" + video\n",
+    "video_out_path1 = \"test_videos_output/\" + video\n",
     "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
     "## To do so add .subclip(start_second,end_second) to the end of the line below\n",
     "## Where start_second and end_second are integer values representing the start and end of the subclip\n",
@@ -699,7 +703,7 @@
     "clip_in = VideoFileClip(video_in_path)\n",
     "clip_out = clip_in.fl_image(process_image) #NOTE: this function expects color images!!\n",
     "#%time white_clip.write_videofile(white_output, audio=False)\n",
-    "clip_out.write_videofile(video_out_path, audio=False, verbose=False, progress_bar=True)"
+    "clip_out.write_videofile(video_out_path1, audio=False, verbose=False, progress_bar=True)"
    ]
   },
   {
@@ -711,15 +715,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 465,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"test_videos_output/solidWhiteRight.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 465,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
     "  <source src=\"{0}\">\n",
     "</video>\n",
-    "\"\"\".format(white_output))"
+    "\"\"\".format(video_out_path))"
    ]
   },
   {
@@ -742,14 +763,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 462,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 681/682 [00:12<00:00, 53.09it/s]\n"
+      "100%|█████████▉| 681/682 [00:12<00:00, 53.24it/s]\n"
      ]
     }
    ],
@@ -760,7 +781,7 @@
     "video = \"solidYellowLeft.mp4\"\n",
     "\n",
     "video_in_path = video_dir + video\n",
-    "video_out_path = \"test_videos_output/\" + video\n",
+    "video_out_path2 = \"test_videos_output/\" + video\n",
     "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
     "## To do so add .subclip(start_second,end_second) to the end of the line below\n",
     "## Where start_second and end_second are integer values representing the start and end of the subclip\n",
@@ -769,20 +790,37 @@
     "clip_in = VideoFileClip(video_in_path)\n",
     "clip_out = clip_in.fl_image(process_image) #NOTE: this function expects color images!!\n",
     "#%time white_clip.write_videofile(white_output, audio=False)\n",
-    "clip_out.write_videofile(video_out_path, audio=False, verbose=False, progress_bar=True)"
+    "clip_out.write_videofile(video_out_path2, audio=False, verbose=False, progress_bar=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 463,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"test_videos_output/solidYellowLeft.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 463,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
     "  <source src=\"{0}\">\n",
     "</video>\n",
-    "\"\"\".format(yellow_output))"
+    "\"\"\".format(video_out_path2))"
    ]
   },
   {
@@ -825,7 +863,7 @@
     "video = \"challenge.mp4\"\n",
     "\n",
     "video_in_path = video_dir + video\n",
-    "video_out_path = \"test_videos_output/\" + video\n",
+    "video_out_path3 = \"test_videos_output/\" + video\n",
     "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
     "## To do so add .subclip(start_second,end_second) to the end of the line below\n",
     "## Where start_second and end_second are integer values representing the start and end of the subclip\n",
@@ -834,7 +872,7 @@
     "clip_in = VideoFileClip(video_in_path)\n",
     "clip_out = clip_in.fl_image(process_image) #NOTE: this function expects color images!!\n",
     "#%time white_clip.write_videofile(white_output, audio=False)\n",
-    "clip_out.write_videofile(video_out_path, audio=False, verbose=False, progress_bar=True)"
+    "clip_out.write_videofile(video_out_path3, audio=False, verbose=False, progress_bar=True)"
    ]
   },
   {
@@ -849,7 +887,7 @@
     "<video width=\"960\" height=\"540\" controls>\n",
     "  <source src=\"{0}\">\n",
     "</video>\n",
-    "\"\"\".format(challenge_output))"
+    "\"\"\".format(video_out_path3))"
    ]
   }
  ],
